# centralita-rdn-v2

./: .env.example  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vercel.json
.claude/worktrees/eager-agnesi-0e7199/: README.md
apps/voice-agent-tauri/: README.md  package-lock.json  package.json
apps/voice-agent-tauri/releases/: latest.json
apps/voice-agent-tauri/src/: App.tsx  styles.css
apps/voice-agent-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/voice-agent-tauri/src-tauri/src/: lib.rs  main.rs
docs/: rdn-api-guide.md  rdn-integration-audit.md
public/downloads/voice-agent/: latest.json
scripts/: seed-admin.ts
scripts/voice-agent/: publish-release.mjs
src/: middleware.ts  proxy.ts
src/app/(dashboard)/: layout.tsx  page.tsx
src/app/change-password/: page.tsx
src/app/login/: page.tsx
src/components/: call-widget.tsx  sidebar.tsx
src/components/ui/: button.tsx  input.tsx
src/contexts/: call-context.tsx
src/lib/actions/: auth.ts
src/lib/api/: audit.ts  auth.ts  client.ts  response.ts  sanitize.ts  twilio-auth.ts  validation.ts
src/lib/calls/: agent-state.ts  ownership.ts
src/lib/events/: client-stream.ts  delivery.ts  emitter.ts  realtime-bus.ts  reconcile-outbox.ts  twilio-idempotency.ts
src/lib/supabase/: admin.ts
src/lib/twilio/: call-engine.ts
src/lib/types/: database.ts
supabase/functions/reconcile-calls/: index.ts
supabase/migrations/: 001_initial_schema.sql  003_must_change_password.sql  006_call_record_freshness.sql  007_dial_idempotency.sql
supabase/sql/: reconcile_setup.sql
(+144 files in other folders)
