[package]
name = "voice-agent-tauri"
version = "0.1.2"
description = "RDN Voice Agent desktop app"
authors = ["RDN"]
edition = "2021"

[lib]
name = "voice_agent_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.1", features = [] }
tauri-plugin-updater = "2.10.1"
